CORE-55687: Potttery Barn cart spacing issues update the styles for english.

--- a/docroot/themes/custom/transac/alshaya_pottery_barn/conditional-sass/wishlist/component/_wishlist-header.scss
+++ b/docroot/themes/custom/transac/alshaya_pottery_barn/conditional-sass/wishlist/component/_wishlist-header.scss
@@ -18,12 +18,10 @@ body.wishlist-enabled {
         }
 
         .acq-mini-cart {
-          @include breakpoint($tablet) {
-            padding-right: rem(12);
-          }
-
-          html[lang="ar"] & {
-            padding-right: 0;
+          html[lang="en"] & {
+            @include breakpoint($tablet) {
+              padding-right: rem(12);
+            }
           }
         }
       }
